# launcher

./: .env.example  .gitignore  README.md  index.html  launcher.aps  launcher.rc  launcher.sln  launcher.vcxproj  launcher.vcxproj.filters  package-lock.json  package.json  resource.h  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
linux/: launcher.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  steam.rs  support.rs
src/api/: launcher.ts
src/components/: SettingsPanel.tsx
src/types/: launcher.ts
windows/: main.cpp
