[package]
name = "srclauncher"
version = "0.1.5"
description = "SRCLauncher"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "srclauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
sha2 = "0.10"
steamlocate = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
tempfile = "3"

[target.'cfg(target_os = "windows")'.dependencies]
dll-syringe = "0.17.1"
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
] }
